# Carla_Autopilot

./: .gen  CHANGELOG.md  CMakeLists.txt  main.cpp  setup.sh
carla_lib/include/carla/: Version.h
carla_lib/lib/: libboost_atomic.so.1.80.0  libboost_filesystem.so.1.80.0  libboost_numpy38.so.1.80.0  libboost_program_options.so.1.80.0  libboost_python38.so.1.80.0  libboost_system.so.1.80.0  libpng16.la  libpng16.so.16.37.0
include/controller/: lqr_controller.h
include/planner/: planner.h  route_planner.h
include/utils/: utils.h
src/controller/: CMakeLists.txt  lqr_controller.cpp
src/planner/: CMakeLists.txt  planner.cpp  route_planner.cpp
src/utils/: CMakeLists.txt  common.cpp
